--- a/css/styles.css
+++ b/css/styles.css
@@ -57,11 +57,32 @@ body {
 }
 
 .snake-cell{
+    position: relative;
     width: 100%;
     aspect-ratio: 1 / 1;
     background-color: black;
     box-sizing: border-box;
     border: solid 0.5px aliceblue;
+}
+.snake-cell.hit::after {
+    content: '';
+    z-index: 0;
+    position: absolute;
+    border-radius: 50%;
+    aspect-ratio: 1 / 1;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: rgba(255, 0, 0, 0.5);
+    animation: hit-animation 0.7s infinite ease-in;
+}
+@keyframes hit-animation {
+    from{
+        width: 100%;
+    }
+    to{
+        width: 500%;
+    }
 }
 .move {
     grid-column: var(--cell-x);
