--- a/css/styles.css
+++ b/css/styles.css
@@ -148,3 +148,45 @@ body {
     box-sizing: border-box;
     border: solid 2px black;
 }
+
+/* start screen */
+.start-screen {
+    position: absolute;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 9;
+    background-color: rgba(0, 0, 0, 0.9);
+    width: 100vw;
+    height: 100vh;
+    animation: appear-start-screen 0.5s ease-in-out 6s;
+}
+@keyframes appear-start-screen {
+    from{
+        transform: scale(0);
+    }
+    to{
+        transform: scale(1);
+    }
+}
+.start-screen button{
+    color: white;
+    background: none;
+    margin-left: auto;
+    border: none;
+    cursor: pointer;
+    font-size: 8rem;
+    position: absolute;
+    transition: 0.2s;
+}
+.start-screen button:hover {
+    transform: scale(1.15);
+}
+@keyframes scale-animation {
+    from{
+        width: 3rem;
+    }
+    to{
+        width: 13rem;
+    }
+}
