--- a/css/styles.css
+++ b/css/styles.css
@@ -179,7 +179,8 @@ body {
         transform: scale(1);
     }
     to{
-        transform: scale(0);
+        transform: scale(4);
+        opacity: 0;
         display: none;
     }
 }
