--- a/css/styles.css
+++ b/css/styles.css
@@ -176,6 +176,7 @@ body {
 }
 @keyframes exit-start-screen {
     from{
+        display: block;
         transform: scale(1);
     }
     to{
@@ -204,4 +205,78 @@ body {
     to{
         width: 13rem;
     }
+}
+
+/* rerstart screen */
+.restart-screen {
+    position: absolute;
+    /* display: none; */
+    flex-direction: column;
+    text-align: center;
+    justify-content: center;
+    align-items: center;
+    top: 0;
+    left: 0;
+    z-index: 8;
+    background-color: rgba(0, 0, 0, 0.9);
+    width: 100vw;
+    height: 100vh;
+    animation: hide-restart-screen 0.5s ease-in-out;
+    animation-fill-mode: forwards;
+}
+.restart-screen.show{
+    animation: show-restart-screen 0.5s ease-in-out;
+    animation-fill-mode: forwards;
+}
+@keyframes show-restart-screen {
+    from{
+        transform: scale(4);
+        opacity: 0;
+        display: none;
+    }
+    to{
+        display: flex;
+        opacity: 1;
+        transform: scale(1);
+    }
+}
+@keyframes hide-restart-screen {
+    from{
+        display: flex;
+        opacity: 1;
+        transform: scale(1);
+    }
+    to{
+        display: none;
+        transform: scale(4);
+        opacity: 0;
+    }
+}
+.restart-screen h1{
+    margin-top: 3.5rem;
+    color: white;
+    font-size: 3rem;
+}
+.restart-screen h2{
+    color: white;
+    margin-top: 0.5rem;
+    font-size: 2.5rem;
+}
+.restart-screen h3{
+    color: rgb(146, 146, 146);
+    margin-top: 3rem;
+    font-size: 2rem;
+}
+.restart-screen .btns{
+    margin-top: 4rem;
+}
+.restart-screen .btns button{
+    padding: 0.5rem;
+    font-size: 1.5rem;
+    margin: 0 1rem;
+    color: rgb(146, 146, 146);
+    background-color: transparent;
+    border: solid 2px rgb(146, 146, 146);
+    border-radius: 5px;
+    cursor: pointer;
 }
