--- a/css/styles.css
+++ b/css/styles.css
@@ -251,11 +251,13 @@ body {
         display: flex;
         opacity: 1;
         transform: scale(1);
+        pointer-events: all;
     }
     to{
         display: none;
         opacity: 0;
         transform: scale(4);
+        pointer-events: none;
     }
 }
 .restart-screen h1{
